# clipper

./: Cargo.toml  README.md
src/: app.rs  audio.rs  camera.rs  main.rs  messages.rs
src/messages/: audio.rs  camera.rs  mod.rs  recorder.rs  video.rs
src/recorder/: ffmpeg.rs  mod.rs  types.rs
